--- a/sample.ipynb
+++ b/sample.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7eac7309",
    "metadata": {},
    "outputs": [
@@ -223,6 +223,17 @@
      "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -321,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a8496fc1",
    "metadata": {},
    "outputs": [
@@ -455,9 +466,7 @@
     "interpreter = OpenInterpreter()\n",
     "\n",
     "# Set your AWS credentials and region\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = \"AKIA46E27RDMQAQAVUX2\"\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"LD/Eazu01Z4XVYyngo2kVbqNrht+YxYt/gu0JhvP\"\n",
-    "os.environ[\"AWS_REGION_NAME\"] = \"us-east-1\"\n",
+    "\n",
     "\n",
     "interpreter.auto_run = True\n",
     "\n",
